--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,8 @@ dmypy.json
 
 # Text File
 to_read.txt
+
+# CSV Files
+Final_Crop_Yield_Karnataka.csv
+Karnataka_Crop_Data.csv
+Rainfall_Data_Karnataka_2000_2010.csv
