--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,6 @@ to_read.txt
 Final_Crop_Yield_Karnataka.csv
 Karnataka_Crop_Data.csv
 Rainfall_Data_Karnataka_2000_2010.csv
+
+# Update Database
+update_sql.py
