--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,9 @@ urllib3==1.25.6
 whitenoise==4.1.4
 pandas==1.0.1
 sqlalchemy==1.3.13
+joblib==0.15.1
+scikit-learn==0.23.1
+Markdown==3.1.1
+scipy==1.4.1
+sklearn==0.0
+threadpoolctl==2.1.0
